--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.1",
     "prettier": "^2.3.2",
     "storybook-dark-mode": "^1.0.8",
     "typescript": "^4.4.2"
