--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buildSb": "build-storybook"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
