--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@xstate/react": "^2.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "xstate": "^4.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
