--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "am-custom-starter",
+  "name": "crispy-engine",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "runBuild": "next start -p 4200",
-    "start": "next dev -p 4200",
+    "start": "start-storybook -p 6006",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "sb": "start-storybook -p 6006",
     "buildSb": "build-storybook"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@xstate/react": "^2.0.0",
-    "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "xstate": "^4.30.1"
@@ -32,7 +28,6 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.1",
     "postcss": "^8.4.6",
     "prettier": "^2.3.2",
     "storybook-dark-mode": "^1.0.8",
